--- a/recipes/chilli-con-carne.html
+++ b/recipes/chilli-con-carne.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chilli Con Carne</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Chili Con Carne</h1>
@@ -40,7 +41,7 @@
     </ul>
 
     <h3>Steps</h3>
-    <ol>
+    <ol class="steps">
         <li>Heat oil in a large saucepan over medium heat. Add green pepper and onion; cook and stir until softened. Stir in ground beef and cook until browned. Stir in wine and crumble over bouillon cubes; cook for a few minutes.</li>
         <li>Stir in chopped tomatoes, tomato paste, and garlic. Season with parsley, basil, chili powder, paprika, cayenne pepper, and oregano. Stir in salt and pepper.</li>
         <li>Bring to a boil over high heat. Reduce heat to medium-low; cover, and simmer for 90 minutes, stirring occasionally.</li>
@@ -48,6 +49,6 @@
         <li>Whisk flour, cornmeal, and water together in a small bowl until smooth; stir into chili and simmer for a further 10 minutes, or until chili has thickened up.</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <button><a href="../index.html">Home</a></button>
 </body>
 </html>
