--- a/recipes/tuna-bake.html
+++ b/recipes/tuna-bake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuna Pasta Bake</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Tuna Pasta Bake</h1>
@@ -27,13 +28,13 @@
     </ul>
 
     <h3>Steps</h3>
-    <ol>
+    <ol class="steps">
         <li>Preheat the oven to 350 degrees F (175 degrees C). Grease an oven-proof baking dish.</li>
         <li>Bring a large pot of lightly salted water to a boil. Add penne and cook, stirring occasionally, until tender yet firm to the bite, about 11 minutes. Drain and toss pasta with olive oil.</li>
         <li>While pasta is cooking, melt butter in a large saucepan over medium heat. Add onion and cook, stirring frequently, until soft and translucent, about 5 minutes. Add tuna and cook for 2 minutes. Pour in heavy cream; season with nutmeg, salt, and pepper. Add penne and toss well. Transfer to the prepared baking dish and cover with Parmesan cheese.</li>
         <li>Bake in the preheated oven until the top is golden brown, 15 to 20 minutes.</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <button><a href="../index.html">Home</a></button>
 </body>
 </html>
