--- a/recipes/wiener-schnitzel.html
+++ b/recipes/wiener-schnitzel.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wiener Schnitzel</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Wiener Schnitzel</h1>
@@ -30,13 +31,13 @@
     </ul>
 
     <h3>Steps</h3>
-    <ol>
+    <ol class="steps">
         <li>Place veal cutlets between 2 sheets of heavy plastic on a solid, level surface. Firmly pound cutlets with the smooth side of a meat mallet to a 1/4-inch thickness. Dip cutlets in flour to coat; shake off excess.</li>
         <li>Beat eggs, Parmesan cheese, milk, parsley, salt, pepper, and nutmeg together in a shallow bowl until combined. Place bread crumbs on a plate.</li>
         <li>Dip each cutlet into the egg mixture, then press in bread crumbs to coat. Place coated cutlets on a plate and refrigerate for 1 hour to overnight.</li>
         <li>Melt butter in a large skillet over medium heat. Cook breaded cutlets in butter until browned, about 3 minutes per side. Transfer cutlets to a serving platter and pour pan juices over them. Garnish with lemon slices.</li>
     </ol>
 
-    <a href="../index.html">Home</a>
+    <button><a href="../index.html">Home</a></button>
 </body>
 </html>
